@@ -13,7 +13,8 @@ console-setup (1.24) UNRELEASED; urgency=medium
   * Removed debconf support for grp:alts_toggle, grp:ctrls_toggle,
     grp:shifts_toggle, grp:shift_caps_toggle as it is impossible to
     support them on the console.
-
+  * xmlreader: ignore tags languageList and countryList.
+  
  -- Anton Zinoviev <zinoviev@debian.org>  Sun, 08 Jun 2008 20:18:47 +0300
 
 console-setup (1.23) unstable; urgency=low
